<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <GVL Name="Variables" Id="{81dc6431-212f-4391-81f1-5e69d918b10b}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	
	////////////////////////////////////////////////////////////////////////
	// Variables for ModBUS TCP to connect, monitor and control UR robots //
	mb_Input_Coils AT %I* : ARRAY [0..255] OF BOOL;
	mb_Output_Coils : ARRAY [0..255] OF BOOL;
	mb_Input_Registers : ARRAY [0..255] OF WORD;
	mb_Output_Registers : ARRAY [0..255] OF WORD;	
	////////////////////////////////////////////////////////////////////////

	{attribute 'OPC.UA.DA.Access' := '3'}
	{attribute 'OPC.UA.DA' := '1'}
	bStartStop AT %I* : BOOL;	

	////////////////////////////// UR Robot ///////////////////////////////
	
	///////////////////	 Raw UR Robot Information  ////////////////////////
	
	arrURAngles AT %I*          	: ARRAY [1..6] OF INT;
	arrURAnglesVelocity AT %I*     	: ARRAY [1..6] OF INT;	
	arrURAnglesCurrent AT %I*      	: ARRAY [1..6] OF INT;		
	arrURAnglesTemp AT %I*        	: ARRAY [1..6] OF INT;		
	arrURJointMode AT %I*        	: ARRAY [1..6] OF INT;	
	arrTCPCartData AT %I*          	: ARRAY [1..3] OF INT;	
	arrTCPRotData AT %I*          	: ARRAY [1..3] OF INT;	
	arrURRobotStatus AT%I*			: ARRAY [1..6] OF INT;
	nURProgState 					: INT;
	nURProgAction  					: INT;		
	nPLCProgState  					: INT;
		
	/////////////////////////////////////////////////////////////////////////	

	///////////////////	 Transformed UR Robot Information  ///////////////////
	{attribute 'OPC.UA.DA' := '1'}
	arrfUR_TCPxyz AT %Q* 			: ARRAY[1..3] OF REAL ;	
	{attribute 'OPC.UA.DA' := '1'}
	arrfUR_TCPuvw AT %Q* 			: ARRAY[1..3] OF REAL ;
	{attribute 'OPC.UA.DA' := '1'}
	arrfUR_Angles AT %Q* 			: ARRAY[1..6] OF REAL ;
	{attribute 'OPC.UA.DA' := '1'}
	arrfUR_AnglesVel AT %Q* 		: ARRAY[1..6] OF REAL ;
	{attribute 'OPC.UA.DA' := '1'}
	arrfUR_AnglesAmp AT %Q* 		: ARRAY[1..6] OF REAL ;
	{attribute 'OPC.UA.DA' := '1'}
	arrfUR_AnglesTemp AT %Q* 		: ARRAY[1..6] OF REAL ;
	{attribute 'OPC.UA.DA' := '1'}
	arrfUR_JntMode AT %Q* 			: ARRAY[1..6] OF REAL ;
	{attribute 'OPC.UA.DA' := '1'}
	arrfUR_Status AT %Q* 			: ARRAY[1..6] OF REAL ;

	///////////////////////////////////////////////////////////////////////////
	
	
	
	////////////////////////////// FANUC Robot /////////////////////////////
	
	///////////////////	 Raw FANUC Robot Information  ///////////////////

	nFANUC_STATE  AT %I*         	: UINT;
	
	arrFANUC_IN_1 AT %I*	       	: ARRAY [0..2] OF UINT; // Starts at 3
	arrFANUC_IN_2 AT %I* 		  	: ARRAY [0..2] OF UINT;	
	arrFANUC_IN_3 AT %I*  	    	: ARRAY [0..2] OF UINT;		
	arrFANUC_IN_4 AT %I* 			: ARRAY [0..2] OF UINT;	
	arrFANUC_IN_5 AT %I*  		  	: ARRAY [0..2] OF UINT;		
	arrFANUC_IN_6 AT %I* 			: ARRAY [0..2] OF UINT;	
	arrFANUC_IN_7 AT %I*	       	: ARRAY [0..2] OF UINT; // Starts at 22
	arrFANUC_IN_8 AT %I* 		  	: ARRAY [0..2] OF UINT;	
	arrFANUC_IN_9 AT %I*  	    	: ARRAY [0..2] OF UINT;		
	arrFANUC_IN_10 AT %I* 			: ARRAY [0..2] OF UINT;	
	arrFANUC_IN_11 AT %I*  		  	: ARRAY [0..2] OF UINT;		
	arrFANUC_IN_12 AT %I* 			: ARRAY [0..2] OF UINT;	
	arrFANUC_IN_13 AT %I* 			: ARRAY [0..2] OF UINT;
	
	nFANUC_REMOTE_START	AT %Q*		: UINT := 0;
	
	arrFANUC_OUT_1 AT %Q*  			: ARRAY [0..2] OF UINT;	
	arrFANUC_OUT_2          		: ARRAY [0..2] OF UINT;	
	arrFANUC_OUT_3           		: ARRAY [0..2] OF UINT;	
	arrFANUC_OUT_4 					: ARRAY [0..2] OF UINT;	
	arrFANUC_OUT_5          	 	: ARRAY [0..2] OF UINT;	
	arrFANUC_OUT_6 					: ARRAY [0..2] OF UINT;		
	arrFANUC_OUT_7        			: ARRAY [0..2] OF UINT;	
	arrFANUC_OUT_8          		: ARRAY [0..2] OF UINT;	
	arrFANUC_OUT_9           		: ARRAY [0..2] OF UINT;	
	arrFANUC_OUT_10					: ARRAY [0..2] OF UINT;	
	arrFANUC_OUT_11          	 	: ARRAY [0..2] OF UINT;	
	arrFANUC_OUT_12					: ARRAY [0..2] OF UINT;	
	
	///////////////////////////////////////////////////////////
	
	///////////////////	 Transformed FANUC Robot Information  ///////////////////
	{attribute 'OPC.UA.DA' := '1'}
	arrfFANUC_TCPxyz AT %Q* 		: ARRAY[1..3] OF REAL ;	
	{attribute 'OPC.UA.DA' := '1'}
	arrfFANUC_TCPuvw AT %Q* 		: ARRAY[1..3] OF REAL ;
	{attribute 'OPC.UA.DA' := '1'}
	arrfFANUC_Angles AT %Q* 		: ARRAY[1..6] OF REAL ;

	///////////////////////////////////////////////////////////////////////////
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>