<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <POU Name="Data_Publisher" Id="{8caf6855-c3c6-4caa-adf3-afae2f0626a3}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM Data_Publisher
VAR
	i : INT := 1;
	j : INT := 1;
	k : INT := 1;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[i := 1;
j := 1;

///////////////////////////////////////////////////////////////////////////////////////////

// UR updates //

IF NOT COMM_UR10.bError1  THEN	
	FOR i := 1 TO 3 BY 1 DO
		Variables.arrfUR_TCPxyz[i] := INT_TO_REAL(Variables.arrTCPCartData[i])/(10);	
		Variables.arrfUR_TCPuvw[i] := INT_TO_REAL(Variables.arrTCPRotData[i])/(1000);
	END_FOR	
	i := 1;
ELSE
	FOR i := 1 TO 3 BY 1 DO
		Variables.arrfUR_TCPxyz[i] := 0;	
		Variables.arrfUR_TCPuvw[i] := 0;
	END_FOR	
	i := 1;	
END_IF

IF NOT COMM_UR10.bError2  THEN
	FOR j := 1 TO 6 BY 1 DO
		Variables.arrfUR_Angles[j] := INT_TO_REAL(Variables.arrURAngles[j])/(17.444);	
		Variables.arrfUR_AnglesVel[j] := INT_TO_REAL(Variables.arrURAnglesVelocity[j]);
		Variables.arrfUR_AnglesAmp[j] := INT_TO_REAL(Variables.arrURAnglesCurrent[j]);	
		Variables.arrfUR_AnglesTemp[j] := INT_TO_REAL(Variables.arrURAnglesTemp[j]);
		Variables.arrfUR_JntMode[j] := INT_TO_REAL(Variables.arrURJointMode[j]);	
		Variables.arrfUR_Status[j] := INT_TO_REAL(Variables.arrURRobotStatus[j]);
	END_FOR
	j := 1;
ELSE
	FOR j := 1 TO 6 BY 1 DO
		Variables.arrfUR_Angles[j] := 0;	
		Variables.arrfUR_AnglesVel[j] := 0;
		Variables.arrfUR_AnglesAmp[j] := 0;	
		Variables.arrfUR_AnglesTemp[j] := 0;
		Variables.arrfUR_JntMode[j] := 0;	
		Variables.arrfUR_Status[j] := 0;
	END_FOR
	j := 1;
END_IF

///////////////////////////////////////////////////////////////////////////////////////////

// Fanuc Updates //
k := 1;
FOR k := 1 TO 3 BY 1 DO
	IF COMM_FANUC.arrf_Internal_FANUC_TCP_xyz[k] > 32676 THEN
		Variables.arrfFANUC_TCPxyz[k] := ((65535 - COMM_FANUC.arrf_Internal_FANUC_TCP_xyz[k]) / 10);
	ELSE
		Variables.arrfFANUC_TCPxyz[k] := COMM_FANUC.arrf_Internal_FANUC_TCP_xyz[k] / 10;		
	END_IF
END_FOR

k := 1;
FOR k := 1 TO 3 BY 1 DO
	IF COMM_FANUC.arrf_Internal_FANUC_TCP_uvw[k] > 32676 THEN
		Variables.arrfFANUC_TCPuvw[k] := ((65535 - COMM_FANUC.arrf_Internal_FANUC_TCP_uvw[k]) / 10);
	ELSE
		Variables.arrfFANUC_TCPuvw[k] := COMM_FANUC.arrf_Internal_FANUC_TCP_uvw[k] / 10;		
	END_IF
END_FOR

k := 1;
FOR k := 1 TO 6 BY 1 DO
	IF COMM_FANUC.arrf_Internal_FANUC_TCP_Joints[k] > 32676 THEN
		Variables.arrfFANUC_Angles[k] := ((65535 - COMM_FANUC.arrf_Internal_FANUC_TCP_Joints[k]) / 100);
	ELSE
		Variables.arrfFANUC_Angles[k] := COMM_FANUC.arrf_Internal_FANUC_TCP_Joints[k] / 100;		
	END_IF
END_FOR


///////////////////////////////////////////////////////////////////////////////////////////]]></ST>
    </Implementation>
    <LineIds Name="Data_Publisher">
      <LineId Id="44" Count="1" />
      <LineId Id="59" Count="1" />
      <LineId Id="54" Count="0" />
      <LineId Id="43" Count="0" />
      <LineId Id="6" Count="34" />
      <LineId Id="5" Count="0" />
      <LineId Id="58" Count="0" />
      <LineId Id="57" Count="0" />
      <LineId Id="52" Count="1" />
      <LineId Id="64" Count="0" />
      <LineId Id="62" Count="0" />
      <LineId Id="65" Count="0" />
      <LineId Id="68" Count="0" />
      <LineId Id="70" Count="1" />
      <LineId Id="69" Count="0" />
      <LineId Id="66" Count="0" />
      <LineId Id="87" Count="0" />
      <LineId Id="63" Count="0" />
      <LineId Id="73" Count="5" />
      <LineId Id="56" Count="0" />
      <LineId Id="88" Count="0" />
      <LineId Id="80" Count="6" />
      <LineId Id="79" Count="0" />
      <LineId Id="55" Count="0" />
      <LineId Id="61" Count="0" />
      <LineId Id="51" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>